# enve

./: .clangd  .gitignore  AGENTS.md  AppImageBuilder.yml  CMakeLists.txt  Makefile  PACKAGING.md  PKGBUILD  README.md  Source and building info.md  org.maurycy.enve.desktop  org.maurycy.enve.xml
.ai/system/: ai-ltc-config.json
.circleci/: config.yml
.github/workflows/: cmake-app-arch.yml  cmake-app.yml  cmake-core.yml  code-quality.yml  linux-baseline.yml  linux-multi-distro.yml  multi-distro.yml  release-build.yml  release.yml  render-test.yml
.omx/: metrics.json
.omx/logs/: hooks-2026-03-19.jsonl  hooks-2026-03-20.jsonl  hooks-2026-03-21.jsonl  turns-2026-03-19.jsonl  turns-2026-03-20.jsonl  turns-2026-03-21.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
cmake/: FindQScintilla.cmake  Findlibmypaint.cmake
debian/: changelog  control  copyright  install  rules
docker/: linux-baseline.Dockerfile
docs/: ai-collaboration.md  ai-relay.md  ai-workbench.md
docs/modernization/: README.md  adr-001-build-and-dependency-modernization.md  ai-handoff.md  baseline-build-spec.md  build-output-organization.md  current-status.md  dependency-ledger.md  feature-flag-semantics.md  library-linkage.md  manual-verification-contract.md  phase-1-roadmap.md  phase-2-roadmap.md  phase-3-toolchain-survey.md  phase-4-roadmap.md  phase-5-batch-b-app-audit.md  phase-5-roadmap.md  phased-backlog.md  stamp-files.md
docs/templates/: feature-lane-handoff.template.md  feature-roadmap.template.md
examples/: CMakeLists.txt
packaging/arch/: PKGBUILD  fix-quazip-path.patch
packaging/scripts/: package_deb.sh  package_pacman.sh
scripts/ci/: PKGBUILD.template  build-linux-baseline.sh  build-pacman-pkg.sh  check-import-export.sh  install-linux-build-deps.sh  preflight-linux-baseline.sh  smoke-linux-baseline.sh  watch-build-status.sh
scripts/packaging/: README.md  build-appimage.sh  build-arch-package.sh  build-deb.sh  package-all.sh
src/app/: CMakeLists.txt  app.pro  brushesClassic.qrc  brushesDeevad.qrc  brushesDieterle.qrc  brushesExperimental.qrc  brushesKaerhon.qrc  brushesRamon.qrc  brushesTanda.qrc  iconloader.cpp  main.cpp  memorychecker.cpp  noInterpolation.qrc  outputsettings.cpp  outputsettings.h  plain.qrc  renderhandler.cpp  tips.qrc  toolbarButtonsBg.qrc  toolbarButtonsCheckable.qrc  toolbarButtonsPlain.qrc  videoencoder.cpp  videoencoder.h
src/app/GUI/: animationwidgetscrollbar.cpp  audiohandler.cpp  canvaswindow.cpp  fontswidget.cpp  glwindow.cpp  glwindow.h  graphboxeslist.cpp  layouthandler.h  mainwindow.cpp  mainwindow.h  tipswidget.cpp
src/app/GUI/BoxesList/OptimalScrollArea/: scrollarea.cpp
src/app/GUI/BrushWidgets/: brushselectionwidget.cpp
src/app/GUI/Dialogs/: dialogsinterfaceimpl.cpp  exportsvgdialog.cpp  exportsvgdialog.h
src/app/GUI/Expressions/: expressiondialog.cpp  expressiondialog.h
src/app/GUI/RenderWidgets/: outputsettingsdialog.cpp  outputsettingsdisplaywidget.cpp
src/core/: CMakeLists.txt  canvas.cpp  core.pri  efiltersettings.cpp  efiltersettings.h  etexture.cpp  ffmpeg_compat.h  gpurendertools.cpp  pointhelpers.cpp  randomgrid.cpp  simplemath.cpp  svgexporter.cpp  svgimporter.cpp
src/core/Animators/: complexanimator.cpp  intanimator.h  qcubicsegment1danimator.cpp  qstringanimator.cpp
src/core/Animators/SmartPath/: nodelist.cpp  smartpath.cpp
src/core/BlendEffects/: blendeffect.h  blendeffectcollection.cpp  blendeffectcollection.h  moveblendeffect.cpp  moveblendeffect.h  targetedblendeffect.cpp  targetedblendeffect.h
src/core/Boxes/: boundingbox.cpp  boundingbox.h  boxrendercontainer.cpp  boxrendercontainer.h  boxrenderdata.cpp  boxrenderdata.h  containerbox.cpp  containerbox.h  imagerenderdata.cpp  internallinkboxbase.h  pathboxrenderdata.cpp  pathboxrenderdata.h
src/core/CacheHandlers/: imagedatahandler.cpp  imagedatahandler.h  samples.cpp  samples.h
src/core/Expressions/: propertybindingparser.cpp
src/core/FileCacheHandlers/: animationcachehandler.cpp  audiostreamsdata.cpp  soundreader.cpp  videostreamsdata.cpp
src/core/Ora/: oraimporter.cpp
src/core/Paint/: animatedsurface.cpp  autotilesdata.cpp  drawableautotiledsurface.cpp  drawableautotiledsurface.h  onionskin.cpp  painttarget.cpp  painttarget.h
src/core/PathEffects/: dashpatheffect.cpp  displacepatheffect.cpp
src/core/Private/: documentrw.cpp  esettings.cpp
src/core/Private/Tasks/: gputaskexecutor.cpp
src/core/RasterEffects/: blureffect.cpp  oileffect.cpp  shadoweffect.cpp
src/core/RasterEffects/OilImpl/: oilsimulator.cpp
src/core/Segments/: cubiclist.cpp
src/core/Sound/: esoundsettings.cpp  esoundsettings.h  soundmerger.cpp
src/core/Timeline/: durationrectangle.cpp  fixedlenanimationrect.cpp
src/core/XML/: xmlexporthelpers.cpp
src/core/skia/: skiahelpers.cpp  skiaincludes.h  skqtconversions.cpp
